Fix dialog width on mobile

--- a/nectar/src/app/components/filter-options/filter-options.component.less
+++ b/nectar/src/app/components/filter-options/filter-options.component.less
@@ -1,7 +1,3 @@
-.filter-options-container {
-
-}
-
 .filter-option-button {
   margin-right: 10px;
   margin-bottom: 10px;
